--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "homepage": "https://jdavis-mcs.github.io/mjhs-esports-portal",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
+  "dev": "vite",
+  "build": "vite build",
+  "lint": "eslint .",
+  "preview": "vite preview",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist"
+},
   "dependencies": {
     "firebase": "^12.8.0",
     "lucide-react": "^0.562.0",
